fixing overflow in daily code byte

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -283,9 +283,12 @@ ul#clock li{
 }
 
 .daily-problem-div{
-  height: 220px;
+  height: 240px;
 }
-
+.daily-problem-div p{
+  overflow: hidden;
+  height:220px;
+}
 .custom-card{
   padding:30px;
 }
@@ -578,4 +581,8 @@ ul#clock li{
 .leaderboard-generate-scroll-y{
   max-height:450px;
   overflow-y:scroll;
+}
+.overflow-description{
+  display: none;
+  margin: 0px 20px 0px 20px;
 }
